// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InformationCallout component renders correctly 1`] = `
<div
  class="t-information-callout border border-slate-400 rounded-bl-3xl"
  data-testid="information-callout"
>
  <div>
    Information callout
  </div>
</div>
`;

exports[`InformationCallout component renders correctly with shadow 1`] = `
<div
  class="t-information-callout border border-slate-400 rounded-bl-3xl shadow-1md"
  data-testid="information-callout"
>
  <div>
    Information callout
  </div>
</div>
`;
